--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "@base-ui/react": "^1.1.0",
+    "@google/genai": "^1.39.0",
     "@hookform/resolvers": "^5.2.2",
     "@mendable/firecrawl-js": "^4.12.0",
     "@neondatabase/serverless": "^1.0.2",
